--- a/routes/pages/not_compatible/browser_not_compatible.html
+++ b/routes/pages/not_compatible/browser_not_compatible.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB" xml:lang="en-GB">
   <head>
     <meta charset="utf-8" />
     <meta
