--- a/routes/pages/not_compatible/browser_not_compatible.html
+++ b/routes/pages/not_compatible/browser_not_compatible.html
@@ -2,10 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB" xml:lang="en-GB">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <title>MARA London - Not Compatible</title>
     <meta name="twitter:image" content="assets/img/OG_01.png" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -20,36 +17,11 @@
       name="twitter:description"
       content="We are very sorry, but we do not support this browser. We recommend updating your browser to a newer version or try our recommended browsers by clicking one of the icons below."
     />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/img/fav_a.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/img/fav_b.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="180x180"
-      href="assets/img/fav_c.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="assets/img/fav_d.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="512x512"
-      href="assets/img/fav_e.png"
-    />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/fav_a.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/fav_b.png" />
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/fav_c.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/fav_d.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/fav_e.png" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/browser_not_supported.css" />
     <script src="assets/js/jquery.min.js"></script>
@@ -61,15 +33,12 @@
     <div id="div_not_supported" class="div_modal">
       <div><img id="browser_sad" src="assets/img/browser_sad.png" /></div>
       <div>
-        <span id="title_msg_text"
-          >Oops!<br />Your browser is not supported.</span
-        >
+        <span id="title_msg_text">Oops!<br />Your browser is not supported.</span>
       </div>
       <div class="pad_00">
         <span id="content_text"
-          >We&#39;re very sorry, but we do not support this browser.
-          <br id="break_00" />We recommend updating your browser to a newer
-          version <br /><b>OR</b><br />
+          >We&#39;re very sorry, but we do not support this browser. <br id="break_00" />We
+          recommend updating your browser to a newer version <br /><b>OR</b><br />
           Try our recommended browsers by clicking one of the icons below.</span
         >
       </div>
