--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB" xml:lang="en-GB">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
     <title>MARA London Portal</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="assets/img/OG_01.png" />
@@ -17,11 +20,36 @@
     />
     <meta name="twitter:title" content="MARA London Portal" />
     <meta property="og:image" content="assets/img/OG_01.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/fav_a.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/fav_b.png" />
-    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/fav_c.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/fav_d.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/fav_e.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/img/fav_a.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/img/fav_b.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="180x180"
+      href="assets/img/fav_c.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="assets/img/fav_d.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="assets/img/fav_e.png"
+    />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css" />
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
@@ -36,15 +64,24 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/eventSetter.js"></script>
+    <script src="assets/js/cookieChecker.js"></script>
     <script src="assets/js/index.js"></script>
-    <script src="assets/js/initialiser.js"></script>
-    <script src="assets/js/modalSetup.js"></script>
-    <script src="assets/js/setupCopyrights.js"></script>
-    <script src="assets/js/setupNavbarButtons.js"></script>
-    <script src="assets/js/setupPopUp.js"></script>
-    <script src="assets/js/setupResetPasswordButton.js"></script>
-    <script src="assets/js/sideMenu.js"></script>
+    <script src="assets/js/inputValidator.js"></script>
+    <script src="assets/js/layeringDisplay.js"></script>
+    <script src="assets/js/layeringInitialiser.js"></script>
+    <script src="assets/js/loadingScreen.js"></script>
+    <script src="assets/js/orientationHandling.js"></script>
+    <script src="assets/js/setup_AnyInputField.js"></script>
+    <script src="assets/js/setup_ContactUs.js"></script>
+    <script src="assets/js/setup_Login.js"></script>
+    <script src="assets/js/setup_Modal.js"></script>
+    <script src="assets/js/setup_NavbarButton.js"></script>
+    <script src="assets/js/setup_PolicyItem.js"></script>
+    <script src="assets/js/setup_PopUp.js"></script>
+    <script src="assets/js/setup_Register.js"></script>
+    <script src="assets/js/setup_ResetPassword.js"></script>
+    <script src="assets/js/setup_SideMenu.js"></script>
+    <script src="assets/js/timingClock.js"></script>
   </head>
 
   <body>
@@ -54,7 +91,10 @@
         <div id="holder_brand">
           <img id="image_MARA" src="assets/img/logo_mara_01.png" />
         </div>
-        <nav class="navbar navbar-dark navbar-expand-md navigation-clean-button" id="holder_navbar">
+        <nav
+          class="navbar navbar-dark navbar-expand-md navigation-clean-button"
+          id="holder_navbar"
+        >
           <div class="container-fluid">
             <div id="adjuster_toggle_icon">
               <div id="toggle_blocker"></div>
@@ -132,8 +172,7 @@
                 <i class="far fa-user input_icon"></i
                 ><input
                   type="text"
-                  id="input_id"
-                  class="input_default_style field_white field_border input_field"
+                  class="input_default_style field_white field_border input_field input_id"
                   placeholder="330..."
                 />
               </div>
@@ -146,8 +185,7 @@
                 <i class="la la-key input_icon"></i
                 ><input
                   type="password"
-                  id="input_password"
-                  class="input_default_style field_white field_border input_field"
+                  class="input_default_style field_white field_border input_field input_password"
                   placeholder="Enter password..."
                 />
               </div>
@@ -162,9 +200,16 @@
               </button>
             </div>
             <div id="input_row_forget_password">
-              <span id="span_forget" class="item_clickable item_underline text_red"
+              <span
+                id="span_forget"
+                class="item_clickable item_underline text_red"
                 >Forget Password?</span
               >
+            </div>
+          </div>
+          <div class="modal_blocker">
+            <div class="loader modal_loader">
+              <span></span><span></span><span></span><span></span>
             </div>
           </div>
         </div>
@@ -173,7 +218,9 @@
         <div id="footer_stack" class="modal_default">
           <div class="row no-gutters" id="footer_01">
             <div class="col-12 d-flex justify-content-center">
-              <span id="item_disclaimer" class="policy_item item_clickable no_padding float_left"
+              <span
+                id="item_disclaimer"
+                class="policy_item item_clickable no_padding float_left"
                 >Disclaimer<br /></span
               ><span class="policy_item">|<br /></span
               ><span id="item_privacy_policy" class="policy_item item_clickable"
@@ -187,7 +234,9 @@
           </div>
           <div class="row no-gutters d-flex justify-content-center">
             <div class="col-auto">
-              <span>Zaim Zazali for MARA London © All Rights Reserved 2020</span>
+              <span
+                >Zaim Zazali for MARA London © All Rights Reserved 2020</span
+              >
             </div>
           </div>
         </div>
@@ -207,37 +256,52 @@
               <div class="modal_body holder_body overflow_y">
                 <div>
                   <span
-                    ><em>ALHAMDULILLAH</em> we managed to establish one stop portal for MARA
-                    sponsored students in the United Kingdom and Ireland. The platform includes an
-                    online registration process, profile access and update, semester result
-                    submission and a communication channel between sponsored students and MARA
-                    London office.<br
+                    ><em>ALHAMDULILLAH</em> we managed to establish one stop
+                    portal for MARA sponsored students in the United Kingdom and
+                    Ireland. The platform includes an online registration
+                    process, profile access and update, semester result
+                    submission and a communication channel between sponsored
+                    students and MARA London office.<br
                   /></span>
                 </div>
                 <div id="about_image_01" class="holder_about_images float_left">
-                  <img class="about_images tilted" src="assets/img/about_00b.png" />
+                  <img
+                    class="about_images tilted"
+                    src="assets/img/about_00b.png"
+                  />
                 </div>
                 <div class="end_content">
                   <span
-                    ><br />In January 2019, a meeting was held to discuss potential digital move
-                    that was able to address issues on the processes towards an efficient workflow.
-                    Currently, the process involves a series of manual procedures , although it is
-                    simple, they are mainly tedious to begin with.&nbsp; It requires students to
-                    complete forms manually, print and scan necessary documents as well as the back
-                    and forth emails for further enquiries and submission. Finally, to overcome
-                    those issue, we took on the project which aims to provide a seamless and
-                    integrated process to our students.<br /><br />A special thanks to Mr Zaim
-                    Zazali, who had offered his experience in between his study to realise this
-                    effort. It is my hope that this portal will benefit MARA sponsored students for
-                    years to come!<br
+                    ><br />In January 2019, a meeting was held to discuss
+                    potential digital move that was able to address issues on
+                    the processes towards an efficient workflow. Currently, the
+                    process involves a series of manual procedures , although it
+                    is simple, they are mainly tedious to begin with.&nbsp; It
+                    requires students to complete forms manually, print and scan
+                    necessary documents as well as the back and forth emails for
+                    further enquiries and submission. Finally, to overcome those
+                    issue, we took on the project which aims to provide a
+                    seamless and integrated process to our students.<br /><br />A
+                    special thanks to Mr Zaim Zazali, who had offered his
+                    experience in between his study to realise this effort. It
+                    is my hope that this portal will benefit MARA sponsored
+                    students for years to come!<br
                   /></span>
                 </div>
                 <div class="holder_bio_header text_left">
-                  <span class="about_bio_header">About MARA Director (London)<br /></span>
+                  <span class="about_bio_header"
+                    >About MARA Director (London)<br
+                  /></span>
                 </div>
                 <div id="section_bio_director_1">
-                  <div id="about_image_02" class="holder_about_images float_left">
-                    <img class="about_images" src="assets/img/pic_rohizal.png" />
+                  <div
+                    id="about_image_02"
+                    class="holder_about_images float_left"
+                  >
+                    <img
+                      class="about_images"
+                      src="assets/img/pic_rohizal.png"
+                    />
                   </div>
                   <div id="bio_director" class="float_left"></div>
                   <div class="row no-gutters bio_first_row">
@@ -271,7 +335,10 @@
                   <div class="row no-gutters">
                     <div class="col">
                       <div class="text-center holder_about_images">
-                        <img class="about_images" src="assets/img/pic_rohizal.png" />
+                        <img
+                          class="about_images"
+                          src="assets/img/pic_rohizal.png"
+                        />
                       </div>
                     </div>
                   </div>
@@ -306,8 +373,14 @@
                   <span>About Developer<br /></span>
                 </div>
                 <div id="section_bio_developer_1">
-                  <div id="about_image_03" class="holder_about_images float_right">
-                    <img class="about_images" src="assets/img/pic_zaimzazali.png" />
+                  <div
+                    id="about_image_03"
+                    class="holder_about_images float_right"
+                  >
+                    <img
+                      class="about_images"
+                      src="assets/img/pic_zaimzazali.png"
+                    />
                   </div>
                   <div id="bio_developer">
                     <div class="row no-gutters bio_first_row">
@@ -360,7 +433,10 @@
                   <div class="row no-gutters">
                     <div class="col">
                       <div class="text-center holder_about_images">
-                        <img class="about_images" src="assets/img/pic_zaimzazali.png" />
+                        <img
+                          class="about_images"
+                          src="assets/img/pic_zaimzazali.png"
+                        />
                       </div>
                     </div>
                   </div>
@@ -438,10 +514,16 @@
               <div class="text-center holder_modal_button">
                 <button
                   class="btn btn-primary default_style default_text btn_modal hover_important"
+                  id="btn_forget_password"
                   type="button"
                 >
                   RESET
                 </button>
+              </div>
+              <div class="modal_blocker">
+                <div class="loader modal_loader">
+                  <span></span><span></span><span></span><span></span>
+                </div>
               </div>
             </div>
             <div id="modal_sign_up" class="modal_default type_modal">
@@ -478,11 +560,11 @@
                   <div class="col-auto" id="holder_btn_check">
                     <div>
                       <button
-                        class="btn btn-primary default_style default_text btn_modal hover_important width_auto"
+                        class="btn btn-primary default_style default_text btn_modal btn_important hover_important width_auto btn_active_black"
                         id="btn_check"
                         type="button"
                       >
-                        Validate
+                        Validate<br />
                       </button>
                     </div>
                   </div>
@@ -525,7 +607,7 @@
                 <hr class="divisor" />
                 <div class="remaining_rows">
                   <div class="input_header_default_style">
-                    <span>Password</span>
+                    <span>Password (Minimum 8 Characters)</span>
                   </div>
                   <div class="row no-gutters">
                     <div class="col">
@@ -562,7 +644,8 @@
                   <div class="row">
                     <div class="col text-center">
                       <div>
-                        <input type="checkbox" id="check_box_01" /><span style="padding-left: 1em;"
+                        <input type="checkbox" id="check_accept" /><span
+                          style="padding-left: 1em;"
                           >I accept the&nbsp;<span
                             id="item_tnc"
                             class="item_clickable item_underline"
@@ -583,8 +666,16 @@
                   REGISTER
                 </button>
               </div>
+              <div class="modal_blocker">
+                <div class="loader modal_loader">
+                  <span></span><span></span><span></span><span></span>
+                </div>
+              </div>
             </div>
-            <div id="modal_contact_us" class="type_modal">
+            <div
+              id="modal_contact_us"
+              class="modal_default type_modal modal_empty"
+            >
               <div id="contact_left_side" class="modal_default float_left">
                 <div id="holder_contact_title">
                   <div id="holder_contact_logo">
@@ -595,8 +686,8 @@
                   </div>
                   <div id="left_title_end_2">
                     <span
-                      >Our team is happy to answer your questions.<br />Fill out the form and we'll
-                      be in touch as soon as possible.<br /><br
+                      >Our team is happy to answer your questions.<br />Fill out
+                      the form and we'll be in touch as soon as possible.<br /><br
                     /></span>
                   </div>
                 </div>
@@ -688,6 +779,11 @@
                   </button>
                 </div>
               </div>
+              <div class="modal_blocker">
+                <div class="loader modal_loader">
+                  <span></span><span></span><span></span><span></span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -703,12 +799,15 @@
               <hr class="header_line" />
               <div class="modal_body holder_body overflow_y"></div>
             </div>
-            <div id="modal_display_with_button" class="modal_default type_modal">
+            <div
+              class="text-center modal_default type_modal"
+              id="modal_display_with_button"
+            >
               <div class="modal_header">
                 <span class="modal_title">TEXT TEXT TEXT</span>
               </div>
               <hr class="header_line" />
-              <div class="modal_body holder_body overflow_y"></div>
+              <div class="text-center modal_body holder_body overflow_y"></div>
               <div class="text-center holder_modal_button">
                 <button
                   class="btn btn-primary default_style default_text btn_modal hover_important btn_popup"
@@ -719,13 +818,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <div id="container_fixed_layers" class="full_fixed">
-      <div id="loading_page" class="whole_page">
-        <div id="initial_loader" class="loader">
-          <span></span><span></span><span></span><span></span>
         </div>
       </div>
     </div>
@@ -759,6 +851,13 @@
               SIGN UP
             </button>
           </div>
+        </div>
+      </div>
+    </div>
+    <div id="container_fixed_layers" class="full_fixed">
+      <div id="loading_page" class="whole_page">
+        <div id="initial_loader" class="loader">
+          <span></span><span></span><span></span><span></span>
         </div>
       </div>
     </div>
