--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB" xml:lang="en-GB">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <title>MARA London Portal</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="assets/img/OG_01.png" />
@@ -20,36 +17,11 @@
     />
     <meta name="twitter:title" content="MARA London Portal" />
     <meta property="og:image" content="assets/img/OG_01.png" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/img/fav_a.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/img/fav_b.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="180x180"
-      href="assets/img/fav_c.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="assets/img/fav_d.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="512x512"
-      href="assets/img/fav_e.png"
-    />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/fav_a.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/fav_b.png" />
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/fav_c.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/fav_d.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/fav_e.png" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css" />
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
@@ -91,10 +63,7 @@
         <div id="holder_brand">
           <img id="image_MARA" src="assets/img/logo_mara_01.png" />
         </div>
-        <nav
-          class="navbar navbar-dark navbar-expand-md navigation-clean-button"
-          id="holder_navbar"
-        >
+        <nav class="navbar navbar-dark navbar-expand-md navigation-clean-button" id="holder_navbar">
           <div class="container-fluid">
             <div id="adjuster_toggle_icon">
               <div id="toggle_blocker"></div>
@@ -200,9 +169,7 @@
               </button>
             </div>
             <div id="input_row_forget_password">
-              <span
-                id="span_forget"
-                class="item_clickable item_underline text_red"
+              <span id="span_forget" class="item_clickable item_underline text_red"
                 >Forget Password?</span
               >
             </div>
@@ -218,9 +185,7 @@
         <div id="footer_stack" class="modal_default">
           <div class="row no-gutters" id="footer_01">
             <div class="col-12 d-flex justify-content-center">
-              <span
-                id="item_disclaimer"
-                class="policy_item item_clickable no_padding float_left"
+              <span id="item_disclaimer" class="policy_item item_clickable no_padding float_left"
                 >Disclaimer<br /></span
               ><span class="policy_item">|<br /></span
               ><span id="item_privacy_policy" class="policy_item item_clickable"
@@ -234,9 +199,7 @@
           </div>
           <div class="row no-gutters d-flex justify-content-center">
             <div class="col-auto">
-              <span
-                >Zaim Zazali for MARA London © All Rights Reserved 2020</span
-              >
+              <span>Zaim Zazali for MARA London © All Rights Reserved 2020</span>
             </div>
           </div>
         </div>
@@ -256,52 +219,37 @@
               <div class="modal_body holder_body overflow_y">
                 <div>
                   <span
-                    ><em>ALHAMDULILLAH</em> we managed to establish one stop
-                    portal for MARA sponsored students in the United Kingdom and
-                    Ireland. The platform includes an online registration
-                    process, profile access and update, semester result
-                    submission and a communication channel between sponsored
-                    students and MARA London office.<br
+                    ><em>ALHAMDULILLAH</em> we managed to establish one stop portal for MARA
+                    sponsored students in the United Kingdom and Ireland. The platform includes an
+                    online registration process, profile access and update, semester result
+                    submission and a communication channel between sponsored students and MARA
+                    London office.<br
                   /></span>
                 </div>
                 <div id="about_image_01" class="holder_about_images float_left">
-                  <img
-                    class="about_images tilted"
-                    src="assets/img/about_00b.png"
-                  />
+                  <img class="about_images tilted" src="assets/img/about_00b.png" />
                 </div>
                 <div class="end_content">
                   <span
-                    ><br />In January 2019, a meeting was held to discuss
-                    potential digital move that was able to address issues on
-                    the processes towards an efficient workflow. Currently, the
-                    process involves a series of manual procedures , although it
-                    is simple, they are mainly tedious to begin with.&nbsp; It
-                    requires students to complete forms manually, print and scan
-                    necessary documents as well as the back and forth emails for
-                    further enquiries and submission. Finally, to overcome those
-                    issue, we took on the project which aims to provide a
-                    seamless and integrated process to our students.<br /><br />A
-                    special thanks to Mr Zaim Zazali, who had offered his
-                    experience in between his study to realise this effort. It
-                    is my hope that this portal will benefit MARA sponsored
-                    students for years to come!<br
+                    ><br />In January 2019, a meeting was held to discuss potential digital move
+                    that was able to address issues on the processes towards an efficient workflow.
+                    Currently, the process involves a series of manual procedures , although it is
+                    simple, they are mainly tedious to begin with.&nbsp; It requires students to
+                    complete forms manually, print and scan necessary documents as well as the back
+                    and forth emails for further enquiries and submission. Finally, to overcome
+                    those issue, we took on the project which aims to provide a seamless and
+                    integrated process to our students.<br /><br />A special thanks to Mr Zaim
+                    Zazali, who had offered his experience in between his study to realise this
+                    effort. It is my hope that this portal will benefit MARA sponsored students for
+                    years to come!<br
                   /></span>
                 </div>
                 <div class="holder_bio_header text_left">
-                  <span class="about_bio_header"
-                    >About MARA Director (London)<br
-                  /></span>
+                  <span class="about_bio_header">About MARA Director (London)<br /></span>
                 </div>
                 <div id="section_bio_director_1">
-                  <div
-                    id="about_image_02"
-                    class="holder_about_images float_left"
-                  >
-                    <img
-                      class="about_images"
-                      src="assets/img/pic_rohizal.png"
-                    />
+                  <div id="about_image_02" class="holder_about_images float_left">
+                    <img class="about_images" src="assets/img/pic_rohizal.png" />
                   </div>
                   <div id="bio_director" class="float_left"></div>
                   <div class="row no-gutters bio_first_row">
@@ -335,10 +283,7 @@
                   <div class="row no-gutters">
                     <div class="col">
                       <div class="text-center holder_about_images">
-                        <img
-                          class="about_images"
-                          src="assets/img/pic_rohizal.png"
-                        />
+                        <img class="about_images" src="assets/img/pic_rohizal.png" />
                       </div>
                     </div>
                   </div>
@@ -373,14 +318,8 @@
                   <span>About Developer<br /></span>
                 </div>
                 <div id="section_bio_developer_1">
-                  <div
-                    id="about_image_03"
-                    class="holder_about_images float_right"
-                  >
-                    <img
-                      class="about_images"
-                      src="assets/img/pic_zaimzazali.png"
-                    />
+                  <div id="about_image_03" class="holder_about_images float_right">
+                    <img class="about_images" src="assets/img/pic_zaimzazali.png" />
                   </div>
                   <div id="bio_developer">
                     <div class="row no-gutters bio_first_row">
@@ -433,10 +372,7 @@
                   <div class="row no-gutters">
                     <div class="col">
                       <div class="text-center holder_about_images">
-                        <img
-                          class="about_images"
-                          src="assets/img/pic_zaimzazali.png"
-                        />
+                        <img class="about_images" src="assets/img/pic_zaimzazali.png" />
                       </div>
                     </div>
                   </div>
@@ -644,8 +580,7 @@
                   <div class="row">
                     <div class="col text-center">
                       <div>
-                        <input type="checkbox" id="check_accept" /><span
-                          style="padding-left: 1em;"
+                        <input type="checkbox" id="check_accept" /><span style="padding-left: 1em;"
                           >I accept the&nbsp;<span
                             id="item_tnc"
                             class="item_clickable item_underline"
@@ -672,10 +607,7 @@
                 </div>
               </div>
             </div>
-            <div
-              id="modal_contact_us"
-              class="modal_default type_modal modal_empty"
-            >
+            <div id="modal_contact_us" class="modal_default type_modal modal_empty">
               <div id="contact_left_side" class="modal_default float_left">
                 <div id="holder_contact_title">
                   <div id="holder_contact_logo">
@@ -686,8 +618,8 @@
                   </div>
                   <div id="left_title_end_2">
                     <span
-                      >Our team is happy to answer your questions.<br />Fill out
-                      the form and we'll be in touch as soon as possible.<br /><br
+                      >Our team is happy to answer your questions.<br />Fill out the form and we'll
+                      be in touch as soon as possible.<br /><br
                     /></span>
                   </div>
                 </div>
@@ -799,10 +731,7 @@
               <hr class="header_line" />
               <div class="modal_body holder_body overflow_y"></div>
             </div>
-            <div
-              class="text-center modal_default type_modal"
-              id="modal_display_with_button"
-            >
+            <div class="text-center modal_default type_modal" id="modal_display_with_button">
               <div class="modal_header">
                 <span class="modal_title">TEXT TEXT TEXT</span>
               </div>
