--- a/routes/pages/portal_student/portal_student.html
+++ b/routes/pages/portal_student/portal_student.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-    <title>Dashboard - Brand</title>
+    <title>MARA London | Student Portal</title>
     <meta name="twitter:image" content="assets/img/OG_01.png" />
     <meta property="og:image" content="assets/img/OG_01.png" />
     <meta
