fixed bugs: pre-submission

--- a/routes/pages/portal_student/portal_student.html
+++ b/routes/pages/portal_student/portal_student.html
@@ -34,7 +34,9 @@
     <link rel="stylesheet" href="assets/css/portal_student.css" />
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/cookieSetter.js"></script>
     <script src="assets/js/logout.js"></script>
+    <script src="assets/js/page_logon.js"></script>
     <script src="assets/js/pageTransition.js"></script>
     <script src="assets/js/portal_student.js"></script>
     <script src="assets/js/setupSideBar.js"></script>
