--- a/routes/pages/portal_student/portal_student.html
+++ b/routes/pages/portal_student/portal_student.html
@@ -35,11 +35,12 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/cookieSetter.js"></script>
-    <script src="assets/js/logout.js"></script>
-    <script src="assets/js/page_logon.js"></script>
-    <script src="assets/js/pageTransition.js"></script>
+    <script src="assets/js/setup_InfoDisplay.js"></script>
+    <script src="assets/js/setup_Logout.js"></script>
+    <script src="assets/js/page_Logon.js"></script>
+    <script src="assets/js/page_Transition.js"></script>
     <script src="assets/js/portal_student.js"></script>
-    <script src="assets/js/setupSideBar.js"></script>
+    <script src="assets/js/setup_SideBar.js"></script>
     <script src="assets/js/smoothScrolling.js"></script>
     <script src="assets/js/theme.js"></script>
   </head>
