Update some lines after XHTML validation

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
     <div id="container_body" class="full_absolute">
       <div id="section_top">
         <div id="holder_brand">
-          <img id="image_MARA" src="assets/img/logo_mara_01.png" />
+          <img id="image_MARA" alt="MARA Logo" src="assets/img/logo_mara_01.png" />
         </div>
         <nav class="navbar navbar-dark navbar-expand-md navigation-clean-button" id="holder_navbar">
           <div class="container-fluid">
@@ -114,7 +114,7 @@
             <div id="holder_malaysia_flag" class="full_absolute"></div>
             <div id="holder_login_title">
               <div id="holder_login_logo">
-                <img id="image_login_logo" src="assets/img/logo_mara_01.png" />
+                <img id="image_login_logo" alt="Login Logo" src="assets/img/logo_mara_01.png" />
               </div>
               <div id="left_title_01">
                 <span>Majlis Amanah Rakyat (MARA)</span>
@@ -227,7 +227,11 @@
                   /></span>
                 </div>
                 <div id="about_image_01" class="holder_about_images float_left">
-                  <img class="about_images tilted" src="assets/img/about_00b.png" />
+                  <img
+                    class="about_images tilted"
+                    alt="Picture of Mr. Rohizal and Zaim Zazali"
+                    src="assets/img/about_00b.png"
+                  />
                 </div>
                 <div class="end_content">
                   <span
@@ -249,7 +253,11 @@
                 </div>
                 <div id="section_bio_director_1">
                   <div id="about_image_02" class="holder_about_images float_left">
-                    <img class="about_images" src="assets/img/pic_rohizal.png" />
+                    <img
+                      class="about_images"
+                      alt="Picture of Mr. Rohizal"
+                      src="assets/img/pic_rohizal.png"
+                    />
                   </div>
                   <div id="bio_director" class="float_left"></div>
                   <div class="row no-gutters bio_first_row">
@@ -283,7 +291,11 @@
                   <div class="row no-gutters">
                     <div class="col">
                       <div class="text-center holder_about_images">
-                        <img class="about_images" src="assets/img/pic_rohizal.png" />
+                        <img
+                          class="about_images"
+                          alt="Picture of Mr. Rohizal"
+                          src="assets/img/pic_rohizal.png"
+                        />
                       </div>
                     </div>
                   </div>
@@ -319,7 +331,11 @@
                 </div>
                 <div id="section_bio_developer_1">
                   <div id="about_image_03" class="holder_about_images float_right">
-                    <img class="about_images" src="assets/img/pic_zaimzazali.png" />
+                    <img
+                      class="about_images"
+                      alt="Picture of Zaim Zazali"
+                      src="assets/img/pic_zaimzazali.png"
+                    />
                   </div>
                   <div id="bio_developer">
                     <div class="row no-gutters bio_first_row">
@@ -372,7 +388,11 @@
                   <div class="row no-gutters">
                     <div class="col">
                       <div class="text-center holder_about_images">
-                        <img class="about_images" src="assets/img/pic_zaimzazali.png" />
+                        <img
+                          class="about_images"
+                          alt="Picture of Zaim Zazali"
+                          src="assets/img/pic_zaimzazali.png"
+                        />
                       </div>
                     </div>
                   </div>
