--- a/routes/pages/not_compatible/browser_not_compatible.html
+++ b/routes/pages/not_compatible/browser_not_compatible.html
@@ -31,7 +31,7 @@
 
   <body id="body_style">
     <div id="div_not_supported" class="div_modal">
-      <div><img id="browser_sad" src="assets/img/browser_sad.png" /></div>
+      <div><img id="browser_sad" alt="Picture of sad face" src="assets/img/browser_sad.png" /></div>
       <div>
         <span id="title_msg_text">Oops!<br />Your browser is not supported.</span>
       </div>
@@ -45,15 +45,15 @@
       <div class="pad_01"><span id="end_msg_text">Thank You!</span></div>
       <div id="browser_row">
         <div id="link_chrome" class="myCol item_clickable item_hover">
-          <div><img class="browser_logo" src="assets/img/chrome.png" /></div>
+          <div><img class="browser_logo" alt="Chrome Logo" src="assets/img/chrome.png" /></div>
           <div class="pad_02"><span class="browser_name">Chrome</span></div>
         </div>
         <div id="link_firefox" class="myCol item_clickable item_hover">
-          <div><img class="browser_logo" src="assets/img/firefox.png" /></div>
+          <div><img class="browser_logo" alt="Firefox Logo" src="assets/img/firefox.png" /></div>
           <div class="pad_02"><span class="browser_name">Firefox</span></div>
         </div>
         <div id="link_opera" class="myCol item_clickable item_hover">
-          <div><img class="browser_logo" src="assets/img/opera.png" /></div>
+          <div><img class="browser_logo" alt="Opera Logo" src="assets/img/opera.png" /></div>
           <div class="pad_02"><span class="browser_name">Opera</span></div>
         </div>
       </div>
