--- a/routes/pages/portal_student/portal_student.html
+++ b/routes/pages/portal_student/portal_student.html
@@ -53,7 +53,9 @@
       >
         <div class="container-fluid d-flex flex-column p-0">
           <div>
-            <div id="brand_holder"><img id="logo_00" src="assets/img/logo_mara_01.png" /></div>
+            <div id="brand_holder">
+              <img id="logo_00" alt="MARA Logo" src="assets/img/logo_mara_01.png" />
+            </div>
             <div id="logon_holder">
               <span id="logon_name" class="span_col">FULL NAME FULL NAME FULL NAME<br /></span
               ><span id="logon_maraiID" class="span_col">0000000000</span>
@@ -169,19 +171,26 @@
               <i class="fas fa-bars"></i>
             </button>
             <ul class="nav navbar-nav flex-nowrap ml-auto">
-              <div class="d-none d-sm-block topbar-divider"></div>
+              <li class="nav-item d-none d-sm-block topbar-divider" role="presentation"></li>
               <li class="nav-item dropdown no-arrow clickable" role="presentation">
                 <div class="nav-item dropdown">
-                  <a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false"
-                    ><span
+                  <div
+                    class="dropdown-toggle nav-link"
+                    data-toggle="dropdown"
+                    aria-expanded="false"
+                    role="main"
+                  >
+                    <span
                       class="d-none d-lg-inline mr-2 text-gray-600 small span_white"
                       id="right_side_full_name"
                       >SHORT NAME</span
                     ><img
                       class="border rounded-circle img-profile"
                       id="profile_picture"
+                      alt="Profile picture"
                       src="assets/img/default_profile_pic.png"
-                  /></a>
+                    />
+                  </div>
                   <div
                     class="dropdown-menu shadow dropdown-menu-right animated--grow-in"
                     role="menu"
@@ -209,21 +218,33 @@
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
                 <div class="row">
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
                 <div class="row">
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
               </div>
@@ -237,21 +258,33 @@
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
                 <div class="row">
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
                 <div class="row">
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
               </div>
@@ -265,21 +298,33 @@
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
                 <div class="row">
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
                 <div class="row">
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
               </div>
@@ -293,21 +338,33 @@
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
                 <div class="row">
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
                 <div class="row">
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
               </div>
@@ -321,21 +378,33 @@
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
                 <div class="row">
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
                 <div class="row">
                   <div
                     class="col d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center"
                   >
-                    <img class="underCon" src="assets/img/underCon.png" />
+                    <img
+                      class="underCon"
+                      alt="Under construction image"
+                      src="assets/img/underCon.png"
+                    />
                   </div>
                 </div>
               </div>
