--- a/public/index.html
+++ b/public/index.html
@@ -600,7 +600,7 @@
                   <div class="row">
                     <div class="col text-center">
                       <div>
-                        <input type="checkbox" id="check_accept" /><span id="check_text"
+                        <input type="checkbox" id="check_accept" /><span id="accept_span"
                           >I accept the&nbsp;<span
                             id="item_tnc"
                             class="item_clickable item_underline"
